# heliopus

./: .clang-tidy  .gitmodules  CMakeLists.txt  run_on_machine.sh
.cache/clangd/index/: activation.h.2846A1FC29AFC67C.idx  alignment.hpp.0ABEE214712B865D.idx  arch.h.A2FFC5255134C59A.idx  arithmetic_tuple.hpp.F246AB4E75EE7534.idx  array.h.F3470F1D8F145B53.idx  array.hpp.A3C328EF4AC64C4C.idx  array_aligned.hpp.946032C859147BFF.idx  array_subbyte.h.1AC3C8FB3BA51C82.idx  array_subbyte.hpp.7D289E407E4A4D9A.idx  bfloat16.h.DB6FF8EBF4CADC5E.idx  bit_field.hpp.0ECC7335958156CE.idx  block_striped.h.70E996A9AE686A97.idx  cache_operation.h.433C27DD0BA99956.idx  collective.hpp.9B825F083F18D2B8.idx  complex.hpp.C7945A8150A0F884.idx  config.h.020092CEB7F784AA.idx  config.hpp.A37C248DA6CE94AD.idx  conv2d_problem_size.h.128B0D75B1A7DD38.idx  convolution.h.7F825C0C9B109DA6.idx  cooperative_gemm.hpp.58EF58DBFFD7BB9A.idx  coord.h.5FC5C38BEF110ABA.idx  copy.hpp.3BB182338236A256.idx  copy.hpp.AAE012D5F445AB8B.idx  copy_atom.hpp.40C2E835D43E4A9C.idx  copy_sm100_tma.hpp.824B3A40F2964373.idx  copy_sm80.hpp.88E22772C72A6EBD.idx  copy_sm90.hpp.B79001D3D130505A.idx  copy_sm90_desc.hpp.0310879727A8C371.idx  copy_traits.hpp.F63052D211B487DD.idx  copy_traits_sm100.hpp.E129902E1EDF4CBB.idx  copy_traits_sm100_tma.hpp.56E5064893E493D7.idx  copy_traits_sm90_tma_swizzle.hpp.CE2BF31FF4902F11.idx  core_io.h.52B988B985D1314F.idx  cuda_host_adapter.hpp.5C285F39EA81B2A5.idx  default_epilogue_tensor_op.h.298263490E33C24F.idx  default_epilogue_volta_tensor_op.h.95301051F0CE6307.idx  default_gemm.h.23CE5556997A154F.idx  default_mma_complex_tensor_op.h.32394DBF78924C5E.idx  default_mma_core.h.B9A0B66BE53A2C18.idx  default_mma_core_simt.h.78CB9721C60BFE41.idx  (+134 more)
include/: dummy.cuh  gemm.cuh  helper.h  launch_utils.cuh  reduce.cuh  rmsnorm.cuh  vecadd.cuh
python/: test.py
src/: distributed_gemm.cu  gemm.cu  main.cu  pdl.cu  rmsnorm.cu  test.cu  vecadd.cu
test/: CMakeLists.txt  rms  test_rmsnorm.cu
test/test_deepgemm/: CMakeLists.txt  gemm_fp8.cu
test/test_deepgemm/include/: utils.cuh
test/test_naive/: CMakeLists.txt
